# seecn

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
assets/: flyout.html
docs/: DESIGN.md  macos-port-design.md  macos-port-research.md
packaging/macos/: Info.plist
scripts/: install.ps1  uninstall.ps1
src/: main.rs  model.rs  monitor.rs  state.rs  tray.rs
src/flyout/: mod.rs
src/platform/: mod.rs
src/platform/macos/: flyout.rs  mod.rs  net.rs  proc.rs  tcptable.rs
src/platform/windows/: etw.rs  flyout.rs  mod.rs  proc.rs  tcptable.rs
tools/: ntstat-probe.rs
tools/flyout-demo/: Cargo.toml
tools/flyout-demo/src/: main.rs
